# tyche-devel

./: .gitignore  check_irq_bug.sh  debug.patch  justfile  linux-patch-hardcoded-intr-remapping-addrs.diff  readme.md
C/: Makefile  meson.build  meson_options.txt
C/libraries/: meson.build
C/libraries/elf64/: meson.build
C/libraries/pts/: meson.build
C/libraries/pts/tests/: test_riscv48.c
C/libraries/ringbuf/: meson.build
C/libraries/sdktyche/: meson.build  readme.md
C/libraries/sdktyche/example/: meson.build
C/libraries/sdktyche/example/app-selector/: meson.build
C/libraries/sdktyche/example/app-selector/include/: enclave_app.h
C/libraries/sdktyche/example/app-selector/manifests/: default_input.json
C/libraries/sdktyche/example/app-selector/untrusted/: main.c
C/libraries/sdktyche/example/cpuid-enclave/: meson.build
C/libraries/sdktyche/example/cpuid-enclave/manifests/: default_input.json
C/libraries/sdktyche/example/interrupt-routing/: .gitignore  Makefile  README.md  meson.build
C/libraries/sdktyche/example/interrupt-routing/include/: enclave_app.h
C/libraries/sdktyche/example/interrupt-routing/manifests/: default.json  default_input.json
C/libraries/sdktyche/example/interrupt-routing/trusted/: interrupts.S  interrupts.h  main.c
C/libraries/sdktyche/example/interrupt-routing/untrusted/: main.c
C/libraries/sdktyche/example/ping-pong/untrusted/: main.c
C/libraries/sdktyche/example/simple-enclave/: meson.build
C/libraries/sdktyche/example/simple-enclave/manifests/: default_input.json
C/libraries/sdktyche/example/simple-sandbox/: meson.build
C/libraries/sdktyche/example/simple-sandbox/application/: main.c
C/libraries/sdktyche/example/simple-sandbox/manifests/: default_input.json
C/libraries/sdktyche/example/timer-expire/: README.md  meson.build
C/libraries/sdktyche/example/timer-expire/manifests/: default_input.json
C/libraries/sdktyche/example/timer-expire/trusted/: main.c
C/libraries/sdktyche/example/timer-expire/untrusted/: main.c
C/libraries/sdktyche/include/: back_kvm.h  sdk_tyche.h  sdk_tyche_types.h
C/libraries/sdktyche/loader/: lib.c
C/libraries/sdktyche/loader/backends/: back_kvm.c  back_tyche.c
C/libraries/sdktyche/runtime/: lib.c
C/microbenchmarks/: Makefile  meson.build
C/microbenchmarks/config/: Makefile
C/microbenchmarks/include/: ubench.h
C/microbenchmarks/src/: creation.c  main.c
C/microbenchmarks/templates/: default.json
C/scripts/: mount_ubuntu.sh
C/tools/: debugging_registers.c  futest.c  meson.build  transition.c
boot_toolchain/src/: main.rs
configs/: linux-riscv.config  linux-x86-vanilla.config  linux-x86.config
crates/arena/src/: free_list.rs
crates/attestation/src/: hashing.rs
crates/capability-engine/: Cargo.toml
crates/capability-engine/src/: capa.rs  debug.rs  domain.rs  free_list.rs  gen_arena.rs  gen_arena_talc.rs  lib.rs  permission.rs  region.rs  remapper.rs  segment.rs  serializer.rs  update.rs
crates/capability-engine/src/remapper/: kmerge_iter.rs
crates/capability-engine/tests/: main.rs
crates/logger/: Cargo.toml
crates/logger/src/: lib.rs
crates/mmu/: Cargo.toml
crates/mmu/src/: color_to_phys_map.rs  coloring_range_allocator.rs  eptmapper.rs  frame_allocator.rs  guest_ptmapper.rs  ioptmapper.rs  lib.rs  mapper.rs  memory_coloring.rs  memory_painter.rs  ptmapper.rs  riscv_ptmapper.rs  walker.rs
crates/mmu/src/color_to_phys_map/: kmerge_iter.rs
crates/mmu/src/memory_coloring/: color_to_phys.rs
crates/riscv_sbi/src/: ecall.rs
crates/riscv_utils/src/: lib.rs
crates/stage_two_abi/: Cargo.toml
crates/stage_two_abi/src/: lib.rs
crates/tychools/src/: allocator.rs  page_table_mapper.rs
crates/vmx/: Cargo.toml
crates/vmx/src/: bitmaps.rs  errors.rs  fields.rs  lib.rs  raw.rs
crates/vtd/: Cargo.toml
crates/vtd/src/: lib.rs  queue_invalidation_regs.rs
crates/x2apic/src/: lib.rs  msr.rs
documentation-coloring/: README.md
documentation-coloring/traces-intr-crash/: fuzz-intr-error.sh  stuck-run-4829.txt  stuck-run-513.txt  stuck-run-996.txt  stuck-run-lapic_ioapic_state.txt
monitor/first-stage/: Cargo.toml
monitor/first-stage/src/: main.rs  second_stage.rs
monitor/first-stage/src/acpi/: mod.rs  tables.rs
monitor/first-stage/src/allocator/: mod.rs
monitor/first-stage/src/elf/: mod.rs  relocate.rs
monitor/first-stage/src/guests/: boot_params.rs  linux.rs  mod.rs  rawc.rs  void.rs
monitor/first-stage/src/mmu/: frames.rs  merged_iter.rs  mod.rs  partitioned_memory_map.rs  scattered_writer.rs
monitor/first-stage/src/smp/: mod.rs
monitor/tyche/: Cargo.toml
monitor/tyche/src/: allocator.rs  attestation_domain.rs  calls.rs  data_transfer.rs  lib.rs  main.rs  monitor.rs  statics.rs
monitor/tyche/src/riscv/: context.rs  filtered_fields.rs  init.rs  mod.rs  platform.rs  state.rs
monitor/tyche/src/x86_64/: context.rs  guest.rs  init.rs  mod.rs  paravirt_iommu.rs  perf.rs  platform.rs  state.bak3  state.rs  state.rs.bak  state.rs.bak2  vmx_helper.rs
monitor/tyche/src/x86_64/paravirt_iommu/: iommu_register_offsets.rs  serialize_deserialize.rs
scripts/: cleanup_nbd.sh
scripts/new-vm/: template-user-data  tyche-convert-image.sh  tyche-create-new-vm.sh
src/: main.rs
