[package]
name = "capa-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
mmu = { path = "../mmu" }
bitflags = "1.3.2"
log = { workspace = true }
attestation = { path = "../../crates/attestation/" }
utils = { version = "0.1.0", path = "../utils" }

[dev-dependencies]
pretty_assertions = "1.4.0"

[dev-dependencies.simple_logger]
default-features = false
features = ["colors"]
version = "4.1.0"
