[package]
name = "capa-engine"
version = "0.1.0"
edition = "2021"

[features]
gen_arena_dyn = []

[dependencies]
bitflags = "1.3.2"
log = { workspace = true }
spin = { workspace = true }
attestation = {path = "../../crates/attestation/"}
talc = {version ="4.4.2", default-features = false, features =["lock_api", "counters"] }

[dev-dependencies.simple_logger]
default-features = false
features = ["colors"]
version = "4.1.0"
